@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install prepare
+DEPEND=dev-libs/boost dev-libs/fcgi dev-libs/libaio dev-libs/libedit dev-libs/crypto++ sys-apps/keyutils fuse? ( sys-fs/fuse ) libatomic? ( dev-libs/libatomic_ops ) gtk? ( x11-libs/gtk+:2 dev-cpp/gtkmm:2.4 gnome-base/librsvg ) radosgw? ( dev-libs/fcgi dev-libs/expat net-misc/curl ) tcmalloc? ( dev-util/google-perftools ) virtual/pkgconfig !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool virtual/pkgconfig
+DESCRIPTION=Ceph distributed filesystem
+EAPI=5
+HOMEPAGE=http://ceph.com/
+IUSE=debug fuse gtk libatomic radosgw static-libs tcmalloc
+KEYWORDS=amd64 x86
+LICENSE=LGPL-2.1
+RDEPEND=dev-libs/boost dev-libs/fcgi dev-libs/libaio dev-libs/libedit dev-libs/crypto++ sys-apps/keyutils fuse? ( sys-fs/fuse ) libatomic? ( dev-libs/libatomic_ops ) gtk? ( x11-libs/gtk+:2 dev-cpp/gtkmm:2.4 gnome-base/librsvg ) radosgw? ( dev-libs/fcgi dev-libs/expat net-misc/curl ) tcmalloc? ( dev-util/google-perftools ) sys-fs/btrfs-progs
+SLOT=0
+SRC_URI=http://ceph.com/download/ceph-0.56.3.tar.bz2
+_eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402	udev	da001465a2e939c93f7ae16947ce3438
+_md5_=efdbbddd8644d5b281d485d2afad2548
