@@ -4,32 +4,36 @@ Hash: SHA256
 AUX README.gentoo 693 SHA256 fa99434d4b1141086cb6c8ec20251e0fc259e6a7f8c20f0a3b93eeff750ec888 SHA512 79eefaebf0d5a0f5e36a2cb0fb1c2433c9498f4bfa99222a124c349078f47583687dff0eede2d6e64af38431b90d519dc78d4142cbad1aa7699d00ab1c3a65b6 WHIRLPOOL d16e9219a964ccfe94dd4cd950420c6405386f249ee7156569e8d79aff749606c9835e04634a39a5cbed0c72d81617d0c28410c15717af59c4c43a00572acda3
 AUX ceph-0.79-libzfs.patch 446 SHA256 bab2247437de8fa0254a97d2224ee1dba2b43393984431910ff6513795a03598 SHA512 24e3da2e47a2c4fc0eb3a9b1d7e1c9da124b138ee1f1141f50a4dacf441aa63cf8a2407edc3d8e008534800f7289c48bb9d5b0207ce2a84c335730afc6ef72da WHIRLPOOL 169a81e9b7e9dc68eab5af9b0eac9f77caee206477a944303d4428e4e20c1793a4aff161a4d312981d496079dd2aa06c9acd1366a0c57c1040b13afc59396f53
 AUX ceph-fix-gnustack.patch 867 SHA256 6a92074666a849de2177b4d3a68b01028f8d61dcac598a22eb0a8937cf297ea1 SHA512 bbea19531662d500c483d71d32dfb911dc62b027e1c5de3faf4c705c4c07274f00ccdcff14fcac75d2e8a2190bef82d307eeb1fe49f919a8e570f4afbfe71f6b WHIRLPOOL 6c40204c606e06cc39fe25575f620029b6d4b81eaa9c74d539d13b66ccf1a07913e56cb4c3ea60cd527d671a61371b99c2d97bee09edc6fcf25b64a22adc9bcc
+AUX ceph.confd 225 SHA256 b12f53878a92b5ee70f9d827e321b641618bd267a7fa57a1e53f0ee4d5c830e8 SHA512 64a68d9985a2dc87cfddc4c6dd5f2af7147b56a677c5b5451caf37b8a07ee49567c7aab368e30974bcd8d670d3471bc79488522a556788e0f2cbf350c272d120 WHIRLPOOL d46cc51dbcf77e17f57126c417955475b9fa2c883bada7c843cbda7c524622690a760795bc6c0af13331abd7e0eca8ba7b139f44b51ec9d5a560137f2f321328
 AUX ceph.confd-r1 69 SHA256 68d0b46b925fbc0e1571230c8bcc55f46beab4e575a3d964a3753534d751fe31 SHA512 b7f7ebb48b94398eaabb6df2cf3a5697d9a055ea4dd9b73c40d2bbf0e1445f418ed760b1f4ebb13cbb7315b2583847eb97b8649f67b6b7cf98081c0599c86aaa WHIRLPOOL 0e1989d813e7e8234112f656a4e017fae521aa5f09d344ddd1f685a6afbe3afdd51adcaf979a8395ab85ae30e6526a03d8c838d10e46f674eec7651d2df43abe
+AUX ceph.initd 435 SHA256 9a8c879187e03f10b57a879b9ad71a84a05e5b37fd802b18e2ef8c8fe88aa098 SHA512 16fafcca88f6b1996d6465581729d0c078c00a0ba6494ff17425307c4c61b9384dd0f7b08ade8118e49432c8a04c2e2ca036a637b5701e18bf44552aea652608 WHIRLPOOL e00cd54db6186dc7ecdc06d06e308208cecc4cc770a446f288187f6d77a9c52ff894ece94f6bbeef1468a88d96e84a16ea8b95bbe43911ba42c132d84870ad2e
 AUX ceph.initd-r1 901 SHA256 6a2e95922ab41a61a1493a7105c31940bbb6942b2c6133718c0489e8f2276f37 SHA512 d9bd98637f8aab40a98f920d65bcceaa0aa4fff0c3cbba26b388b9567e40bce54f2c29d8dbae4dc282ed4b1ade86121bd376df6fbd8b058bce47cd6a6ee4dc9e WHIRLPOOL 1cc547ef8ce6a0c5184c14497e692d43ae48193dba57c81108f3b0e386328d53fa9230cdf410d9c737486a46c8b65569005d2916bf61ff6de19874de16edea5a
 AUX ceph.logrotate 491 SHA256 85f0b0c73a2c400bfff49609db45d995a2b2a2a0e64a88569deb3c353aa0b9d6 SHA512 7212fd04fd46ad2f86410cde145722ae15ca50ef1374d9c50fa8c980e869c1d2c9f68acbea94280223a489686f939d2ecc94dcf5607d8786671e8456a3174a3d WHIRLPOOL 88a04b5928da2a5461209f8799192f7970fed16cfd32891b98d825ecbbae850704ca4ff4dba560e92b2fb8189e36777430c391cfb2599d57f2a3318a0a8cce89
+DIST ceph-0.56.3.tar.bz2 3214620 SHA256 5ea39c9fce4741e0a4adb04262fa02d491834996c5819709463748095c9ad1b5 SHA512 b5f3ad54c81a9412f9219f99abb72efc6bc2010ccb29f1bf8a540b15e817ea7f7ccfaddea2b190739a0fba3dd378ac366006879ca66d6c9cafefe8baac0248e8 WHIRLPOOL 82e30278e352adfe3dd38c6bda49f8ae9abe49bab9e40d271d43bad6ad14c299c46fb51089fdb7216df96bc143a82c0073e735e26ae39c471dbe2b5b82d2fd7c
 DIST ceph-0.67.10.tar.bz2 3385142 SHA256 34401f59b85ed3b5ad5c687d453372b96341faa3aa726c65609e88c959b96c68 SHA512 12c30fc103cdd5b0b897c5ee54a73f41cabf3b144cf0c8b0bfdc1dafb288718e6e67aad92720a70970cc71b87b4ac05f42c095a570da58ebcce193ddbb2cf553 WHIRLPOOL 64989b0e337aaf18cad7de938d95a51f99907ba3f599a4aca45d5ae45591edc486b2ad34b1f1746f76b386438e4c1611a230e3e3375585983c6289d8cea3585f
 DIST ceph-0.67.9.tar.bz2 3390731 SHA256 cc2f50641550e635324db1ffa0157fabacc8ccc820a250c3f4b51117c033e3ca SHA512 71b652ec2c30a168d4bc58d1bfa94ba4d235569a480681cab8a52c4b46e0b4d5b1c5fe04f3b921b3951dcd0dea8425cb0b531cd403c7edb3cee3cc44e3d30510 WHIRLPOOL 2602c232e8a0c3b80db15e01ea91dabb8e57a22a67e433d20713881d9569bc2adda9fd3e1fbe66efc71ab4c261c8c7bb7c71c48443da70cbf03bb693d8e1c21e
 DIST ceph-0.80.5.tar.bz2 4084478 SHA256 912c53204e678f870e2a9650bb79101b0b2fcad2a60bd79c62a12fb0b811d371 SHA512 e0ea985330bebc7299a7e97655b0e3b26fdc042f2a2bd4e6e5bf1fcfeb6378ce3cd95d7bead3111e970d61f119177ce5bbcf51ee82d4228e83eba6f37ae686fb WHIRLPOOL 99cf5757386a9ffe879a480d56e7654b57c6722a0cee4e26418fb3e670cdb071fbac2ba29bfdc119a9e2d39a3d67975dc32a520222ac1239df5c30b27722c0b0
+EBUILD ceph-0.56.3.ebuild 2382 SHA256 ce9c62c12026c88bfbe7d8c4a2418b7e89061cad8ffb88b77373a00d33010577 SHA512 ba7deab6bf465870d3beae39a3e750255cf6e4cd292639215c65cc9d426d48bb33d593d2707cf5cddddc2ca994e4826978205729f00b9e46e3c2d4aef23b2ad9 WHIRLPOOL 3a7da74cd926c7a74c470d025182ca3bb012751e17d0b12b4b5966f64d176ac029e2f2c7e08dfc8e1571f35298341cbcc13d92d14f6a18859cf1eb9f606cd3a6
 EBUILD ceph-0.67.10.ebuild 2809 SHA256 11124ba15f664daae6a50f1367025175a17e800ae1a5d314b4eeaf91fbff2140 SHA512 9918f93b798573c6deb091562830481f2c9d11ddfae0eea8de4b9ce25f5a3b579495da067000d65fd7a51904902aac5f912a5762b115b643e153e1b0d526e68f WHIRLPOOL a6eae34a30ba429d157fbd49611fe63ca6652e11d502af0b40a1e89d9413476c0f7a4e9ffea4a555089e61fc072d8a7ef5be37cf22190460268ab8d34bef3dd3
 EBUILD ceph-0.67.9.ebuild 2808 SHA256 da4adc03b607aab5a8e57aa11b1cb79cdcc7a285875abe8f153428583680c504 SHA512 3366166f076df8432a947a27ec1d03e95cc561d7ed82e1657fbacba377320c19fe7d648b1f65516536e4c6341fcac0468570589c7f16bdd6c2f3b99f66607286 WHIRLPOOL 9906506fa67d39605283e33a36fd8d40e1eb869338cb58a5c9a3d81445b4b7fc28bd1a5c1f43539a69da4eedef35dd405091904ada3d72e5cc986c1c2263cb69
 EBUILD ceph-0.80.5.ebuild 2924 SHA256 c54571c29bb6c06035a200575de43cd611d6e29878151c610baf2b0277d54d46 SHA512 4d57726f9c8fe801765e947150d5d102e9f67211191c5a0ae3f097a9e5a16561a291f26e8ac93f8319d1c60d48e0fffbd227a96b2c4eca3e755d62278ec53e96 WHIRLPOOL 8f7fd6bc51ec290d188f1c0d13e7aa2e771b4055da8432177fa68e0376b830ed657e76310f946407b93a2a07567654689c9cb32f3d1157ab0e1d8f355761cb54
 EBUILD ceph-9999.ebuild 2831 SHA256 53b9f5f999f58928106b4f778b766d06484ca2b3e4e435f30be204b57613657c SHA512 95a57fbc1a2db98090b5d33cd0e427f0d4a73bf2067a27bddba11d6e692858f47281a2036a2e90e5a6ca5956eb6abbf942e247afd43ee15b33f3ef5e59313fdd WHIRLPOOL 81296e442cbb1ee0bb48e4d9493a14df8fe4e59e412ee2ff5206464775397cb95582100c5d51b509eb343b190d9f0ca3d28f18ebf76d135e9d79cf9d009121e0
-MISC ChangeLog 10525 SHA256 4f941103bcf396540dbce8ea5608eda5304c636bec84b21452f9d279b28de7de SHA512 9d420b783217d0665cb95e26a8891f8ac207fbfb93dd355f8410f65caef9de92902e48ee3485d77520c209eb372d50187d3cb07ba9787ceb41183a1634f0fd6e WHIRLPOOL 99b3ed1c054bae8ca57688dad766dda66ea05904170dc136e6f2c6c5616e3d48c5162486ffccd158623a1bfb213d387fbaac5da35c3c329325ddc3c2e42d5c72
+MISC ChangeLog 10673 SHA256 750f1cce8236d37d4e76733be9ea986636ef39d41ca278d87a6e4aca6f1c9897 SHA512 6aaaf92b3e5d318b580295bccfe763f25dd1142b9f5ec8c4c19601c49cb43c562a6b9d93df49f59b0c35b779466fdbb68e82bb3167690262bc6dbb977360c6e5 WHIRLPOOL 219ce84717df4686cff136de329e69d3e4d7151d4aa7555d9243a50061e0c432fc6f79ffad6a1de479e1057fb8fc76edbbd70c0cf8129ab2bec9627c1d434e61
 MISC metadata.xml 948 SHA256 72989673dd794fc1d9e83509d15991407862cd2c4817bcad130018442ca4b866 SHA512 4bd4189f1f5f181c915a7afac73dd774a877aae27026cd5c2ad32a89591ec6dcc0deb4ca1fb572d5f517d1cfa1edb94a345c6b0c03a39b1904ab8882e972ff5c WHIRLPOOL a89a309c10b0422e5045b7a1e62561efeda3125e35172fb33feea87fb44c14ae08cdf4810bb0acdc8eda8f856987d11ed77c157809635fe0a984764ee3b73ce8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT8xDDAAoJEJIMDbyqvv1VdM0QAOXK75pkDMp0A5wyKpleLOX5
-1KKg1xAyY+3mGgUqmqRsUtGMJ/Q7ZkmpFW453lKQG4tIbXKg1bif76B16CZ3m9Gh
-shm4JuEYhQF/nvjRx3QAFbDUhTm3GGF3szEopR7dYP7L3gedyVtfPDraOBxYx2mi
-K41GyBiKExIwhW9m+vnV5zMAzwCphFAWhjO2xJCS8omeZGIXaPAqput2kYVO/myS
-+sSZ6co8Yyw7+1DWsaVJVJalfIMKhyJ0rammGUZOiugjjtbQqh4XuynKKfdQC+EH
-8c79d7vxhe4SyJl29Roxm6SNi3AnFrhGH/U3ftM0W95C+WDskzbKQvQ4PK3IX5jR
-wz6ovgh0vKJewLHpyhLjS/F2LilojlPt7dNQ5AREhf2uaN0G9g1Aa+77cyfDywrQ
-Se4ma26O4mmOKZWVfGEZr1rYk2IBzJU5i4zJPsAGwaTlHyONQVI5BbC0kdZ42qWb
-n5witLIuWr/4XgQegdyYZZ0LBrn6zKaK9HUxD18vV4T2DD+VGa7tTN1+Lm2DaJiG
-bT4OYQ97zFG7QE9+d5vtcG25jHDtTS0ny10k77WFCnQCvpjzT4eu7ACcKny92rWl
-9NsaFVECbcwTVkmLVJBdvN7tXWmjPRgCX4feExY1ykXlLXYN6qLq78zU8XY3EhW5
-BM/VVxUGvxsvzhJ8WwND
-=I3aq
+iQIcBAEBCAAGBQJT9WlWAAoJEJIMDbyqvv1VeWIQAOIyLXmN+LHx2zQR/sCWCKe7
+sewUTaLrdpCqkbq0jecQAxz/9JYMiUORuJ4szWOEVreVGtfulAX40xX/nQjx1Hn2
+hiKwhPx5zBTPkjdcxiGhgsSoNGEga+Zqu43jIp9ERWHzSrrCaeFqGesrUT4QnV7j
+0z+HgM9PSXPHXK+vsk8rvverEUEx4/Xv00Y4F6OFD3VkjG1P8tbGNAhABwjcjxU6
+4xOPhluHVJPZXJ8ggp6QABFvlVOplw5nursif9uiUJ0ZEO1dRwbKTZ70cD92Gz0P
+krj/RNKd4gHrozQaQQlp3O39rHtAgo2wZOPOyE+I5k75PP7BMU+AzhhoP1EQfx2J
+0uuQRlPFqBycto+XuTSIfcfFDbWpmaaANZgQ/cxnSOk8ve2XpDQPXLnB7XZMzyfq
+7tjqGzZXWIyMBw7UznEDLEz5D1uKOlFxZvoJWb1IaBmvIJuHcz4Qd0oqJq8BFjD3
+a2hoQTKzymCaKuYnx//7wpSEI/kYC8E3xBfImVST0rmxNA3bEjeVvP08C+epSOvn
+lxz7v4Y5yJBaRspVxJJf66OK0gbpUCs7L7WeOXVw9Qw+u7PsKHkheQVZS7K6Xm0a
+wCjzPThL0z6M7I3/sw6qdHsXfhHxQkIn8SNKnIhoAL4cNCQ7AmjudGem9DA8Kbww
+Iq8YVMjoDR235iWdnNGs
+=c0wn
 -----END PGP SIGNATURE-----
