@@ -1,0 +1,27 @@
+#!/sbin/runscript
+
+extra_started_commands="reload"
+bin=/usr/lib/ceph/ceph_init.sh
+
+depend() {
+	after net
+	before netmount
+}
+
+start() {
+	ebegin "Initializing local Ceph node"
+	$bin "${CEPH_COMMON[@]}" "${CEPH_START[@]}"
+	eend 0
+}
+
+reload() {
+	ebegin "Reloading ceph configuration"
+	$bin "${CEPH_COMMON[@]}" "${CEPH_RELOAD[@]}"
+	eend 0
+}
+
+stop() {
+	ebegin "Stopping local Ceph node"
+	$bin "${CEPH_COMMON[@]}" "${CEPH_STOP[@]}"
+	eend 0
+}
